--- a/sidd/package.json
+++ b/sidd/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.3",
+    "@react-three/fiber": "^9.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.2.0",
+    "react-use-websocket": "^4.13.0",
+    "socket.io-client": "^4.8.1",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
